# bootcamp_python_2025

./: Casa rural bootcamp python 2025.md  README.md  main.py  pyproject.toml
multiplayer/: MULTIPLAYER.md  client.py  main.py  models.py  server.py
tests/: remove_duplicates_test.py
