[project]
name = "bootcamp-python-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorist>=1.8.5",
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "ruffus>=2.8.4",
    "ty>=0.0.1a14",
    "watchdog[watchmedo]>=6.0.0",
    "websocket>=0.2.1",
    "websockets>=15.0.1",
]
